--- a/html/index.html
+++ b/html/index.html
@@ -6,18 +6,22 @@
     <title>Age Calculator</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body onload="changeTheImage()" onload="loginState()">
+  <body onload="changeTheImage()"; onload="loginState()">
     <div class="Navbar">
-      <img id="userImg" alt="profile picture" >
+      <div class="menuIcons">
+        <img id="menuIcon" src="../svg/bars-solid.svg" onclick="toggleMenu()">
+        <img id="closeIcon" src="../svg/xmark-solid.svg" onclick="toggleMenu()" style="display: none;">
+      </div>
       <ul>
-        <li><span>Home</span></li>
-        <li><span><a href="./profile.html">profile</a></span></li> 
-        <li class="sidebarContent"><span> <i onclick="logout()" class="fas fa-sign-out-alt">Logout</i> </span></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="./profile.html">Profile</a></li> 
+        <li class="sidebarContent"><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
       </ul>
     </div>
+    
+
     <div class="container">
       <div class="Left">
-        <h1>Left</h1>
         <div class="inputContainer">
             <form action="#">
           <div>
@@ -30,7 +34,6 @@
         </div>
       </div>
       <div class="Right">
-        <h1>Right</h1>
         <div >
             <h1 id="result"></h1>
         </div>
