--- a/html/profile.html
+++ b/html/profile.html
@@ -5,19 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
     <link rel="stylesheet" href="../css/profile.css" />
-
 </head>
-<body>
+<body onload="getProfileInfo()">
     <div>
         <div>
             <a href="./index.html">Back</a>
-            <img id="userImgprofile" alt="profile picture" >    
-        <p class="username" id="usernameprofile"></p>
-        <p class="username" id="usersurnameprofile"></p>
-        <p class="username" id="usermailprofile"></p>
+            <img id="userImgprofile" alt="profile picture">
+            <p class="username" id="usernameprofile"></p>
+            <p class="username" id="usersurnameprofile"></p>
+            <p class="username" id="usermailprofile"></p>
         </div>
-        <p onclick="deleteAccount()">delete account</p>
+        <button onclick="editProfile()">Edit Profile</button>
+        <button onclick="deleteAccount()">Delete Account</button>
     </div>
+
+    <!-- Edit Profile Form (Initially hidden) -->
+    <div id="editProfileForm" style="display: none;">
+        <h2>Edit Profile</h2>
+        <form id="profileForm">
+            <label for="editName">Name:</label>
+            <input type="text" id="editName" required><br>
+            <label for="editSurname">Surname:</label>
+            <input type="text" id="editSurname" required><br>
+            <label for="editEmail">Email:</label>
+            <input type="email" id="editEmail" required><br>
+            <label for="editImage">Profile Image:</label>
+            <input type="file" id="editImage" accept="image/*"><br>
+            <button type="submit">Save Changes</button>
+        </form>
+    </div>
+
+    <script src="../js/index.js"></script>
+    <script>
+        function getProfileInfo() {
+            const profileImg = document.getElementById("userImgprofile");
+            profileImg.src = localStorage.getItem("img");
+            document.getElementById("usernameprofile").innerText = localStorage.getItem("name");
+            document.getElementById("usermailprofile").innerText = localStorage.getItem("mail");
+            document.getElementById("usersurnameprofile").innerText = localStorage.getItem("surname");
+        }
+
+        function deleteAccount() {
+            // Add your logic here to delete the account
+            // For example:
+            localStorage.removeItem("img");
+            localStorage.removeItem("name");
+            localStorage.removeItem("mail");
+            localStorage.removeItem("surname");
+            alert("Account deleted successfully!");
+            window.location.href = "./index.html"; // Redirect to the index page after deletion
+        }
+
+        function editProfile() {
+            const editForm = document.getElementById("editProfileForm");
+            const nameInput = document.getElementById("editName");
+            const surnameInput = document.getElementById("editSurname");
+            const emailInput = document.getElementById("editEmail");
+
+            // Populate the edit form with existing profile information
+            nameInput.value = localStorage.getItem("name");
+            surnameInput.value = localStorage.getItem("surname");
+            emailInput.value = localStorage.getItem("mail");
+
+            // Show the edit form
+            editForm.style.display = "block";
+        }
+
+        document.getElementById("profileForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+
+            // Update localStorage with edited profile information
+            localStorage.setItem("name", document.getElementById("editName").value);
+            localStorage.setItem("surname", document.getElementById("editSurname").value);
+            localStorage.setItem("mail", document.getElementById("editEmail").value);
+            // Update the profile display with new information
+            getProfileInfo();
+
+            // Hide the edit form
+            document.getElementById("editProfileForm").style.display = "none";
+
+            alert("Profile updated successfully!");
+        });
+    </script>
 </body>
-<script src="../js/index.js"></script>
 </html>
