--- a/html/signin.html
+++ b/html/signin.html
@@ -1,36 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Signin</title>
-    ,
-    <link rel="stylesheet" href="../css/auth.css" />
-  </head>
-  <body>
-    <div>
-      <form name="form-login" method="read" action="#">
-        <h1>SIGN IN</h1>
-        <p id="signin_msg"></p>
-        <label for="userName">Email</label>
-        <input type="email" id="email" placeholder="Email" required />
-        <label for="userPw">Password</label>
-        <input
-          type="password"
-          id="pwd"
-          autocomplete="on"
-          placeholder="Password"
-          required
-        />
-        <input
-          id="login_btn"
-          type="submit"
-          value="Login"
-          onclick="signin(event)"
-        />
-        <a style="color: #000000" href="..//html/signup.html">Create account</a>
-      </form>
-    </div>
-  </body>
-  <script src="../js/validation.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Signin</title>
+  <link rel="stylesheet" href="../css/auth.css" />
+  <style>
+    /* Added CSS for styling and responsiveness */
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f0f0f0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+
+    div {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      width: 300px;
+      max-width: 90%;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+    }
+
+    label {
+      margin-bottom: 5px;
+    }
+
+    input {
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+
+    input[type="submit"] {
+      background-color: #534caf;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    input[type="submit"]:hover {
+      background-color: #7e1dce;
+    }
+
+    a {
+      text-align: center;
+      display: block;
+      margin-top: 10px;
+      color: #000;
+      text-decoration: none;
+    }
+
+    @media screen and (max-width: 400px) {
+      /* Adjusting layout for small screens */
+      div {
+        width: 90%;
+      }
+    }
+  </style>
+</head>
+<body>
+  <div>
+    <form name="form-login" method="read" action="#">
+      <h1>SIGN IN</h1>
+      <p id="signin_msg"></p>
+      <label for="userName">Email</label>
+      <input type="email" id="email" placeholder="Email" required />
+      <label for="userPw">Password</label>
+      <input type="password" id="pwd" autocomplete="on" placeholder="Password" required />
+      <input id="login_btn" type="submit" value="Login" onclick="signin(event)" />
+      <a href="..//html/signup.html">Create account</a>
+    </form>
+  </div>
+</body>
+<script src="../js/validation.js"></script>
 </html>
